--- a/workspaces/app/package.json
+++ b/workspaces/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Foco_Frontend",
+  "name": "@flumine/foco-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,10 +25,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
