--- a/workspaces/app/package.json
+++ b/workspaces/app/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-indexed-db": "^1.0.12",
+    "react-redux": "^8.0.4",
     "react-router-dom": "6.4.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.4",
@@ -47,10 +48,13 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "@types/faker": "^6.6.9",
     "@types/react-router": "^5.1.19",
     "@vitejs/plugin-react": "^2.1.0",
     "react-modal": "^3.15.1",
+    "redux": "^4.2.0",
+    "redux-toolkit": "^1.1.2",
     "sass": "^1.55.0",
     "typescript": "^4.8.3",
     "vite": "^3.1.3"
