--- a/workspaces/server-emulator/package.json
+++ b/workspaces/server-emulator/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@types/next": "^9.0.0",
     "typescript": "^4.8.4"
+  },
+  "scripts": {
+    "dev": "next dev"
   }
 }
