--- a/workspaces/app/package.json
+++ b/workspaces/app/package.json
@@ -52,6 +52,7 @@
     "@types/faker": "^6.6.9",
     "@types/react-router": "^5.1.19",
     "@vitejs/plugin-react": "^2.1.0",
+    "react-intersection-observer": "^9.4.0",
     "react-modal": "^3.15.1",
     "redux": "^4.2.0",
     "redux-toolkit": "^1.1.2",
